--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ crate-type = ["cdylib"]
 wasm-bindgen = "0.2.33"
 console_error_panic_hook = "0.1.5"
 
+[dependencies.rand]
+version = "0.6"
+features = ["wasm-bindgen"]
+
 [dependencies.web-sys]
 version = "0.3.10"
 features = [
