--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = { version = "0.2.33" }
 console_error_panic_hook = "0.1.5"
+rand = "0.7"
 
-[dependencies.rand]
-version = "0.6"
+[dependencies.getrandom]
+version = "0.1"
 features = ["wasm-bindgen"]
 
 [dependencies.web-sys]
