--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.js",
-    "build": "webpack --config webpack-release.config.js"
+    "start": "webpack-dev-server --mode development",
+    "build": "webpack"
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "^0.2.7",
