Explicitly specify the mode for production builds
`production` is the default mode for Webpack;
however, it warns about it not being set explicitly.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "start": "webpack-dev-server --mode development",
-    "build": "webpack"
+    "build": "webpack --mode production"
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "^0.2.7",
