--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = { version = "0.2.33", features = ["nightly"] }
 console_error_panic_hook = "0.1.5"
+rand = "0.8.3"
 
-[dependencies.rand]
-version = "0.6"
-features = ["wasm-bindgen"]
+[dependencies.getrandom]
+version = "0.2"
+features = ["js"]
 
 [dependencies.web-sys]
 version = "0.3.10"
