--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen = { version = "0.2.33", features = ["nightly"] }
+wasm-bindgen = "0.2.83"
 console_error_panic_hook = "0.1.5"
 rand = "0.8.3"
 
@@ -17,7 +17,7 @@ version = "0.2"
 features = ["js"]
 
 [dependencies.web-sys]
-version = "0.3.10"
+version = "0.3.60"
 features = [
     "Window",
     "Document",
